revive project and make it work

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "angry-cats",
+  "name": "physics-engine",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +9,7 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "typescript": "^5.5.3",
-    "vite": "^5.4.1"
+    "typescript": "^5.9.3",
+    "vite": "^7.1.10"
   }
 }
